# basic_repo_template

./: .gitignore  MANIFEST.in  README.md  cookiecutter.json  pyproject.toml  requirements.txt
basic_repo_template/: __init__.py  __main__.py
src/: f_equals.py
{{cookiecutter.project_name}}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/system/: default_paths.py
